ecmascript/parser/tests/typescript-errors/tsc/statements/throwStatements/invalidThrowStatement/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/statements/throwStatements/invalidThrowStatement/input.ts:3:6
  |
3 | throw; 
  |      ^

error: Expected {, got throw
 --> $DIR/tests/typescript-errors/tsc/statements/throwStatements/invalidThrowStatement/input.ts:5:8
  |
5 | export throw null;
  |        ^^^^^

